--- a/film.html
+++ b/film.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page de Film</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="film.css">
     <link rel="stylesheet" href="suggestions.css">
     <link rel="stylesheet" href="addblock.css">
@@ -12,27 +13,54 @@
 <body>
     
     <div id="overlay"></div>
-    <div id="popup">
+    <div id="popuppp">
         <h2>Profitez de vos films sans pub !</h2>
         <p>Installez <strong>Adblock Plus</strong> pour éviter les interruptions publicitaires.</p>
         <a href="https://adblockplus.org/" target="_blank">
             <button class="install-btn">Installer Adblock Plus</button>
         </a>
-        <button class="close-btn" onclick="closePopup()">Fermer</button>
+        <button class="close-btn" onclick="closePopuppp()">Fermer</button>
     </div>
 
     <header class="navbar">
-        <div class="logo">Nayzcine</div>
-        <nav class="menu">
-            <a href="index2.html">Nouveauté</a>
-            <a href="suggestions.html">Suggestions</a>
-            <a href="report.html">Signaler</a>
-        </nav>
-        <div class="search-container">
-            <input type="text" id="search" placeholder="🔍 Rechercher...">
-            <div id="search-results"></div>
-        </div>
-    </header>
+    <!-- Burger menu (mobile) -->
+    <div class="burger" id="burger-menu" aria-label="Ouvrir le menu" tabindex="0">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- Logo au centre -->
+    <div class="logo">NAYZCINE</div>
+
+    <!-- Menu desktop -->
+    <nav class="menu" aria-label="Menu principal">
+      <a href="index2.html">Nouveauté</a>
+      <a href="suggestions.html">Suggestions</a>
+      <a href="report.html">Signaler</a>
+    </nav>
+
+    <!-- Barre de recherche desktop -->
+    <div class="search-container">
+      <input type="text" id="search" placeholder="🔍 Rechercher..." autocomplete="off">
+      <div id="search-results"></div>
+    </div>
+
+    <!-- Loupe mobile -->
+    <img src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="Rechercher" class="loupe-icone" id="loupe-btn" />
+
+    <!-- Menu mobile -->
+    <nav class="mobile-menu" id="mobile-menu" aria-label="Menu mobile">
+      <a href="index2.html">Nouveauté</a>
+      <a href="suggestions.html">Suggestions</a>
+      <a href="report.html">Signaler</a>
+    </nav>
+    <!-- Barre de recherche mobile -->
+    <div class="mobile-search-box" id="mobile-search-box">
+      <input type="text" id="mobile-search" placeholder="Rechercher..." autocomplete="off">
+      <div id="mobile-search-results"></div>
+    </div>
+  </header>
     <br>
     <div class="content">
         <h1 id="movie-title"></h1>
@@ -42,10 +70,10 @@
         <div class="episode-count" id="episode-count"></div>
     </div>
 
-    <script src="addblock.js"></script>
     <script src="film.js"></script>
     <script src="suggestions.js"></script>
     <script src="popup.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
