--- a/index2.html
+++ b/index2.html
@@ -109,14 +109,13 @@
     </section>
   </main>
 
-  <!-- ✅ POPUP MODERNE POUR LES ÉPISODES -->
-  <div id="popup" style="display: none;">
-    <div id="popup-content" class="popup-inner">
-      <!-- Le contenu (titre + épisodes) est injecté par JS -->
+    <!-- Bloc POPUP pour les épisodes -->
+    <div id="popup">
+        <div id="popup-content"></div>
     </div>
-  </div>
 
-  <script src="script.js"></script>
-  
+    <script src="report.js"></script>
+    <script src="script.js"></script>
+    
 </body>
 </html>
