--- a/film.html
+++ b/film.html
@@ -70,6 +70,10 @@
         <div class="episode-count" id="episode-count"></div>
     </div>
 
+    <div id="popup">
+        <div id="popup-content"></div>
+    </div>
+    
     <script src="film.js"></script>
     <script src="suggestions.js"></script>
     <script src="popup.js"></script>
